mongodb/deployment/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-deployment
spec:
  replicas: 1  # Single replica for MongoDB
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
        - name: mongodb
          image: mongodb:latest  # Use a specific version if needed
          imagePullPolicy: Never  # Use the local image
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "500Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db  # Default MongoDB data directory
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
